# PinShot

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  install.sh  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  pins.rs
src/components/: Control.tsx  Pin.tsx
src/lib/: ipc.ts
