[package]
name = "pinshot"
version = "0.1.0"
description = "Floating screenshot pin overlay"
authors = ["Mahmut Salman"]
edition = "2021"

[lib]
name = "pinshot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
